<resources>
    <string name="app_name">Photo Library</string>
    <string name="login.message.email">Email</string>
    <string name="login.message.password">Password</string>
    <string name="login.message.sigin">SIGN IN OR REGISTER</string>
    <string name="login.error.message.signin">Unable to login %s</string>
    <string name="login.error.message.signup">Unable to register %s</string>

    <string name="main.message.picture.source">Select a photo</string>
    <string name="main.notice.upload.init">Photo is being processed</string>
    <string name="main.notice.upload.complete">Photo was successfully posted</string>
    <string name="main.error.dispatch.camera">Error creating file</string>

    <string name="nav_main">Main Screen</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_gallery">My Gallery</string>
    <string name="nav_inspect">Inspect Photos</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mainFragmen_msg_no_photo">No Photos to display</string>
    <string name="mainFragmen_msg_error">Impossible to get information: %s</string>
    <string name="mainFragmen_msg_share">Share</string>

    <string name="mainInspect_message_title">Enter tags separated with commas to search:</string>
    <string name="mainInspect_message_hint">Tags to search</string>
    <string name="mainInspect_message_button">SEARCH</string>
    <string name="mainInspect_error_message">Please enter at least one tag</string>

    <string name="search_notice_saved">Saved successfully</string>
</resources>
