<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_wrench"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/nav_camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image_multiple"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_inspect"
            android:icon="@drawable/ic_file_find"
            android:title="@string/nav_inspect" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>