<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.professional.micromaster.photolibrary.fragments.inspect.ui.InspectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainInspect_message_title"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="@dimen/inspect_fragment_search_width"
            android:layout_height="wrap_content"
            android:hint="@string/mainInspect_message_hint"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/mainInspect_message_button" />

    </LinearLayout>

</RelativeLayout>
